--- a/src/chap4-2.Rmd
+++ b/src/chap4-2.Rmd
@@ -56,7 +56,7 @@ Final starting values:
 grid[which.min(sse), ]
 ```
 
-### Fit the nonlinear model
+#### Fit the nonlinear model
 ```{r}
 nls_fit <- nls(y ~ nlmodel(x, theta), data = algal, trace = T,
                start = list(theta = c(6, .1, 50)))
@@ -67,14 +67,14 @@ sm$correlation
 ```
 
 
-### Confidence intervals for parameter estimates
+#### Confidence intervals for parameter estimates
 ```{r}
 # the output shows theta 1-3, it's actually theta 0-2
 mapply(function(est, se) est + qt(c(.025, .975), df.residual(nls_fit)) * se,
        sm$coefficients[, 1], sm$coefficients[, 2], SIMPLIFY = F)
 ```
 
-### Confidence and prediction interval for $Y$
+#### Confidence and prediction interval for $Y$
 ```{r}
 y0 <- fitted(nls_fit)
 cf <- cf <- nls_fit$m$gradient() 
