--- a/index.Rmd
+++ b/index.Rmd
@@ -2,7 +2,7 @@
 title: "Numerical Examples Using R"
 output:
   html_document:
-    css: ~/Documents/wangyuchen.github.io/css/blog.css
+    css: blog.css
     includes:
       before_body: _includes/navbar.html
       after_body: _includes/footer.html
